--- a/package.json
+++ b/package.json
@@ -10,7 +10,9 @@
   },
   "dependencies": {
     "@expo/metro-runtime": "~3.2.3",
+    "@react-native-community/slider": "^4.5.4",
     "expo": "~51.0.26",
+    "expo-dev-client": "~4.0.28",
     "expo-device": "~6.0.2",
     "expo-status-bar": "~1.12.1",
     "react": "18.2.0",
@@ -18,8 +20,7 @@
     "react-native": "0.74.5",
     "react-native-base64": "^0.2.1",
     "react-native-ble-plx": "^3.2.1",
-    "react-native-web": "~0.19.10",
-    "expo-dev-client": "~4.0.28"
+    "react-native-web": "~0.19.10"
   },
   "devDependencies": {
     "@babel/core": "^7.20.0",
